--- a/Cafe_web_ChinhThuc/main/templates/home.html
+++ b/Cafe_web_ChinhThuc/main/templates/home.html
@@ -24,7 +24,7 @@
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'index' %}">Intro</a></li>
                 <li><a href="{% url 'comment' %}">List comment</a></li>
-                <li><a href="{% url 'report' %}">Report</a></li>
+                <li><a href="{% url 'report' %}">Complain</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                 <li><a href="{% url 'register' %}">Signup</a></li>
