--- a/Cafe_web_ChinhThuc/main/templates/reports/report.html
+++ b/Cafe_web_ChinhThuc/main/templates/reports/report.html
@@ -6,11 +6,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon"
+        href="https://cdn-icons.flaticon.com/png/512/1972/premium/1972388.png?token=exp=1636827183~hmac=83f0d040d3bb2010d9a77561214a4550">
     <link rel="stylesheet" href="{%static 'report.css' %}">
     <title>Đánh giá</title>
 </head>
 
-<body class='container' >
+<body class='container'>
     <form action="{%url 'save' %}" method="post" class="form-login">
         {% csrf_token %}
         <p class='ten'> Họ và tên:{{post.title}}</p>
