--- a/Cafe_web_ChinhThuc/main/templates/reports/conment.html
+++ b/Cafe_web_ChinhThuc/main/templates/reports/conment.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h2 style="color:cornflowerblue">Những ý kiến đóng góp của bạn giúp phần nâng cao chất lượng dịch vụ của chúng tôi
+    <h2 style="color:tomato">Những ý kiến đóng góp của bạn giúp phần nâng cao chất lượng dịch vụ của chúng tôi
         <button style="width: 100px; background-color:yellow"><a href="{%url 'home'%}"
                 style="text-decoration: none">Trang chủ</a></button>
     </h2>
