--- a/Cafe_web_ChinhThuc/main/templates/registration/login.html
+++ b/Cafe_web_ChinhThuc/main/templates/registration/login.html
@@ -42,6 +42,11 @@
                 <h3>Liên hệ
                     hỗ trợ</h3>
             </a>
+            <div>
+                <h2>Tài khoản mặc định</h2>
+                <p>username: <i>huynhsangteam</i></p>
+                <p>password: <i>gochoctap@123</i></p>
+            </div>
         </footer>
     </div>
 </body>
