--- a/Cafe_web_ChinhThuc/main/static/css/tailwind.css
+++ b/Cafe_web_ChinhThuc/main/static/css/tailwind.css
@@ -11,9 +11,7 @@ Document
 Use a better box model (opinionated).
 */
 
-*,
-::before,
-::after {
+*, ::before, ::after {
   box-sizing: border-box;
 }
 
@@ -24,7 +22,7 @@ Use a more readable tab size (opinionated).
 html {
   -moz-tab-size: 4;
   -o-tab-size: 4;
-     tab-size: 4;
+  tab-size: 4;
 }
 
 /**
@@ -57,16 +55,8 @@ Improve consistency of default fonts in all browsers. (https://github.com/sindre
 */
 
 body {
-  font-family:
-		system-ui,
-		-apple-system, /* Firefox supports this but not yet `system-ui` */
-		'Segoe UI',
-		Roboto,
-		Helvetica,
-		Arial,
-		sans-serif,
-		'Apple Color Emoji',
-		'Segoe UI Emoji';
+  font-family: system-ui, -apple-system, /* Firefox supports this but not yet `system-ui` */
+  'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 }
 
 /*
@@ -97,15 +87,14 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr[title] {
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 /**
 Add the correct font weight in Edge and Safari.
 */
 
-b,
-strong {
+b, strong {
   font-weight: bolder;
 }
 
@@ -114,17 +103,8 @@ strong {
 2. Correct the odd 'em' font sizing in all browsers.
 */
 
-code,
-kbd,
-samp,
-pre {
-  font-family:
-		ui-monospace,
-		SFMono-Regular,
-		Consolas,
-		'Liberation Mono',
-		Menlo,
-		monospace;
+code, kbd, samp, pre {
+  font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
@@ -142,8 +122,7 @@ small {
 Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
 */
 
-sub,
-sup {
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -185,11 +164,7 @@ Forms
 2. Remove the margin in Firefox and Safari.
 */
 
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
   font-family: inherit;
   /* 1 */
   font-size: 100%;
@@ -205,8 +180,7 @@ Remove the inheritance of text transform in Edge and Firefox.
 1. Remove the inheritance of text transform in Firefox.
 */
 
-button,
-select {
+button, select {
   /* 1 */
   text-transform: none;
 }
@@ -215,9 +189,7 @@ select {
 Correct the inability to style clickable types in iOS and Safari.
 */
 
-button,
-[type='button'],
-[type='submit'] {
+button, [type='button'], [type='submit'] {
   -webkit-appearance: button;
 }
 
@@ -291,19 +263,7 @@ summary {
  * Removes the default spacing and border for appropriate elements.
  */
 
-blockquote,
-dl,
-dd,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-figure,
-p,
-pre {
+blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
   margin: 0;
 }
 
@@ -317,8 +277,7 @@ fieldset {
   padding: 0;
 }
 
-ol,
-ul {
+ol, ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -378,9 +337,7 @@ body {
  *    https://github.com/tailwindcss/tailwindcss/pull/116
  */
 
-*,
-::before,
-::after {
+*, ::before, ::after {
   box-sizing: border-box;
   /* 1 */
   border-width: 0;
@@ -427,8 +384,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color: #9ca3af;
 }
 
-input::placeholder,
-textarea::placeholder {
+input::placeholder, textarea::placeholder {
   opacity: 1;
   color: #9ca3af;
 }
@@ -449,12 +405,7 @@ table {
   border-collapse: collapse;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
   font-weight: inherit;
 }
@@ -477,11 +428,7 @@ a {
  * normalize.css.
  */
 
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
   padding: 0;
   line-height: inherit;
   color: inherit;
@@ -494,10 +441,7 @@ textarea {
  * 'mono' font family.
  */
 
-pre,
-code,
-kbd,
-samp {
+pre, code, kbd, samp {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -518,14 +462,7 @@ samp {
  *    https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210
  */
 
-img,
-svg,
-video,
-canvas,
-audio,
-iframe,
-embed,
-object {
+img, svg, video, canvas, audio, iframe, embed, object {
   display: block;
   /* 1 */
   vertical-align: middle;
@@ -539,8 +476,7 @@ object {
  * https://github.com/mozdevs/cssremedy/issues/14
  */
 
-img,
-video {
+img, video {
   max-width: 100%;
   height: auto;
 }
@@ -751,28 +687,26 @@ video {
 @-webkit-keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
+    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
   }
-
   50% {
     transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
+    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
 }
 
 @keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
+    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
   }
-
   50% {
     transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
+    -webkit-animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
 }
 
@@ -1038,7 +972,9 @@ video {
 }
 
 *, ::before, ::after {
-  --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
+  --tw-ring-inset: var(--tw-empty, /*!*/
+  /*!*/
+  );
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgba(59, 130, 246, 0.5);
@@ -1058,52 +994,41 @@ video {
   .sm\:mr-12 {
     margin-right: 3rem;
   }
-
   .sm\:mb-3 {
     margin-bottom: 0.75rem;
   }
-
   .sm\:ml-6 {
     margin-left: 1.5rem;
   }
-
   .sm\:ml-auto {
     margin-left: auto;
   }
-
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
   }
-
   .sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
   }
-
   .sm\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
   }
-
   .sm\:py-48 {
     padding-top: 12rem;
     padding-bottom: 12rem;
   }
-
   .sm\:pt-48 {
     padding-top: 12rem;
   }
-
   .sm\:pb-60 {
     padding-bottom: 15rem;
   }
-
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
-
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1114,24 +1039,19 @@ video {
   .md\:mt-0 {
     margin-top: 0px;
   }
-
   .md\:mb-0 {
     margin-bottom: 0px;
   }
-
   .md\:hidden {
     display: none;
   }
-
   .md\:flex-row {
     flex-direction: row;
   }
-
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
-
   .md\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
@@ -1142,14 +1062,11 @@ video {
   .lg\:flex-row {
     flex-direction: row;
   }
-
   .lg\:items-stretch {
     align-items: stretch;
   }
 }
 
-@media (min-width: 1280px) {
-}
+@media (min-width: 1280px) {}
 
-@media (min-width: 1536px) {
-}
+@media (min-width: 1536px) {}
